--- a/frontend/netlify.toml
+++ b/frontend/netlify.toml
@@ -1,7 +1,7 @@
 [build]
-  base = "/"
+  base = "frontend"
   publish = "build"
-  command = "npm run build"
+  command = "npm run netlify-build"
 
 [[redirects]]
   from = "/*"
@@ -10,6 +10,7 @@
 
 [build.environment]
   CI = "false"
+  NODE_VERSION = "16"
   # You can set a default value here, but it's better to set it in Netlify UI
   REACT_APP_API_URL = "https://your-backend-url.com"
 
